--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tasnim's Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Montserrat:wght@300;400;500;600;800;900&family=Nunito:wght@200;700&family=Open+Sans&family=Poppins:ital@1&family=Rubik+Marker+Hatch&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section>
+    <div class="half-width">
+    <h1>Welcome To</h1>
+    <h1><span class="fusu">Tasnim Sarwar</span> World</h1>
+    <h3>I am a thinker, believer who is a bit sensitive</h3>
+    <p>My strength is my willingness to take on new challenges and strive for perfection. This is because I believe that learning from our successes and failures is the most effective way to shape ourselves in order to achieve our objectives.And I believe in myself and my efforts, and I seek fulfillment in all aspects of my life.My short-term goal is to excel at the skills I'm learning, take on a challenge in some outstanding businesses, and climb the way up.</p></div>
+    <div class="half-width">
+    <img src="my-bg.png">
+    </div>
+    </section>
 </body>
 </html>
