--- a/index.html
+++ b/index.html
@@ -11,8 +11,47 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="top-banner flexible-container">
+    <div class="half-width">
     <h1>Welcome To</h1>
-    <h3>Tasnim Sarwar World</h3>
+    <h1> <span class="orange-color">Tasnim Sarwar</span> World</h1>
+    <h2>persistent and courageous</h2>
+    <p>I believe my strength is my attitude, and I like to take up challenges and think to accept both success and failure in a balanced way to move forward. I want to say that I don't leave any questions altogether as I believe in myself and my work.My short-term goal is to find a platform to expand my career and grow with the organization. And my long-term goal is to be the cause of the organization's success.</p>
+    <a class="link-button" target="_blank" href="https://www.linkedin.com/company/programminghero/">HIRE-ME</a>
+    </div>
+     <div class="half-width">
+    <img src="my-bg (1).png">
+    </div>
+    </section>
+    <section class="dream-big flexible-container">
+        <div class="half-width">
+            <img src="376268fb8dccf5e8248f86c74f634fb9.jpg">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a web developer</h2>
+            <p>Well, my desire to teach came about pretty naturally. After about 10 years of working in different startup, semi-corporate, and freelance jobs all over the world, I developed a strong desire to pass on what I had learned in the field to the next generation of coders. It's important to me to give something back to the community that had helped me so much over the years. Mentoring made perfect sense.</p>
+            <a class="link-button"target="_blank" href="">DOWNLOAD RESUM</a>
+        </div>
+
+    </section>
+    <section class="experience-area">
+        
+            <h1>Experinces</h1>
+            <div class="flexible-container">
+                <div id="full-dev-experience" class="experience-item">
+                    <h2 >Full Stack Web Developer</h2>
+                    <h3 class="orange-color">2022-Present | Pro Level Developer</h3>
+                    <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.A well-organized paragraph supports or develops a single controlling idea, which is expressed in a sentence called the topic sentence. A topic sentence has several important functions: it substantiates or supports an essay’s thesis statement; it unifies the content of a paragraph and directs the order of the sentences; and it advises the reader of the subject to be discussed and how the paragraph will discuss it. </p>
+            </div>
+            <div id="web-dev-experience" class="experience-item">
+                <h2 >Baby Web Developer</h2>
+                <h3 class="orange-color">2022-2024 | Programing Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.n a coherent paragraph, each sentence relates clearly to the topic sentence or controlling idea, but there is more to coherence than this. If a paragraph is coherent, each sentence flows smoothly into the next without obvious shifts or jumps. A coherent paragraph also highlights the ties between old information and new information to make the structure of ideas or arguments clear to the reader.</p>
+            </div>
+        </div>
+    </section>
+ <footer><p>© Peter Parker 2023, a Programming Hero initiative.</p></footer>
     
 </body>
 </html>
