--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </section>
     <section class="experience-area">
         
-            <h1 class="exp">Experinces</h1>
+            <h1 class="exp">Experiences</h1>
             <div class="flexible-container">
                 <div id="full-dev-experience" class="experience-item">
                     <h2 >Full Stack Web Developer</h2>
